@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2014, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010, 2016, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -63,6 +63,8 @@ class Example implements Comparable<Example> {
         procFiles = new ArrayList<File>();
         supportFiles = new ArrayList<File>();
         srcPathFiles = new ArrayList<File>();
+        moduleSourcePathFiles = new ArrayList<File>();
+        additionalFiles = new ArrayList<File>();
 
         findFiles(file, srcFiles);
         for (File f: srcFiles) {
@@ -81,13 +83,23 @@ class Example implements Comparable<Example> {
                 else if (files == srcFiles && c.getName().equals("sourcepath")) {
                     srcPathDir = c;
                     findFiles(c, srcPathFiles);
+                } else if (files == srcFiles && c.getName().equals("modulesourcepath")) {
+                    moduleSourcePathDir = c;
+                    findFiles(c, moduleSourcePathFiles);
+                } else if (files == srcFiles && c.getName().equals("additional")) {
+                    additionalFilesDir = c;
+                    findFiles(c, additionalFiles);
                 } else if (files == srcFiles && c.getName().equals("support"))
                     findFiles(c, supportFiles);
                 else
                     findFiles(c, files);
             }
-        } else if (f.isFile() && f.getName().endsWith(".java")) {
-            files.add(f);
+        } else if (f.isFile()) {
+                if (f.getName().endsWith(".java")) {
+                    files.add(f);
+                } else if (f.getName().equals("modulesourcepath")) {
+                    moduleSourcePathDir = f;
+                }
         }
     }
 
@@ -205,7 +217,16 @@ class Example implements Comparable<Example> {
             opts.addAll(options);
 
         if (procFiles.size() > 0) {
-            List<String> pOpts = Arrays.asList("-d", classesDir.getPath());
+            List<String> pOpts = new ArrayList<>(Arrays.asList("-d", classesDir.getPath()));
+
+            // hack to automatically add exports; a better solution would be to grep the
+            // source for import statements or a magic comment
+            for (File pf: procFiles) {
+                if (pf.getName().equals("CreateBadClassFile.java")) {
+                    pOpts.add("--add-exports=jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED");
+                }
+            }
+
             new Jsr199Compiler(verbose).run(null, null, false, pOpts, procFiles);
             opts.add("-classpath"); // avoid using -processorpath for now
             opts.add(classesDir.getPath());
@@ -219,14 +240,27 @@ class Example implements Comparable<Example> {
             }
         }
 
+        List<File> files = srcFiles;
+
         if (srcPathDir != null) {
             opts.add("-sourcepath");
             opts.add(srcPathDir.getPath());
         }
 
+        if (moduleSourcePathDir != null) {
+            opts.add("--module-source-path");
+            opts.add(moduleSourcePathDir.getPath());
+            files = moduleSourcePathFiles;
+        }
+
+        if (additionalFiles.size() > 0) {
+            List<String> sOpts = Arrays.asList("-d", classesDir.getPath());
+            new Jsr199Compiler(verbose).run(null, null, false, sOpts, additionalFiles);
+        }
+
         try {
             Compiler c = Compiler.getCompiler(runOpts, verbose);
-            c.run(out, keys, raw, opts, srcFiles);
+            c.run(out, keys, raw, opts, files);
         } catch (IllegalArgumentException e) {
             if (out != null) {
                 out.println("Invalid value for run tag: " + runOpts);
@@ -289,7 +323,11 @@ class Example implements Comparable<Example> {
     List<File> srcFiles;
     List<File> procFiles;
     File srcPathDir;
+    File moduleSourcePathDir;
+    File additionalFilesDir;
     List<File> srcPathFiles;
+    List<File> moduleSourcePathFiles;
+    List<File> additionalFiles;
     List<File> supportFiles;
     File infoFile;
     private List<String> runOpts;
@@ -331,7 +369,7 @@ class Example implements Comparable<Example> {
                 else if (first.equals("backdoor"))
                     return new BackdoorCompiler(verbose);
                 else if (first.equals("exec"))
-                    return new ExecCompiler(verbose);
+                    return new ExecCompiler(verbose, rest);
                 else
                     throw new IllegalArgumentException(first);
             }
@@ -515,8 +553,11 @@ class Example implements Comparable<Example> {
      * Run the test in a separate process.
      */
     static class ExecCompiler extends Compiler {
-        ExecCompiler(boolean verbose) {
+        List<String> vmOpts;
+
+        ExecCompiler(boolean verbose, String... args) {
             super(verbose);
+            vmOpts = Arrays.asList(args);
         }
 
         @Override
@@ -525,7 +566,7 @@ class Example implements Comparable<Example> {
                 throw new IllegalArgumentException();
 
             if (verbose)
-                System.err.println("run_exec: " + opts + " " + files);
+                System.err.println("run_exec: " + vmOpts + " " + opts + " " + files);
 
             List<String> args = new ArrayList<String>();
 
@@ -541,6 +582,7 @@ class Example implements Comparable<Example> {
                 args.add(toolsJar.getPath());
             }
 
+            args.addAll(vmOpts);
             addOpts(args, "test.vm.opts");
             addOpts(args, "test.java.opts");
             args.add(com.sun.tools.javac.Main.class.getName());
